--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:design:27.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
