feat: Implemented Master Detail Flow on tablet and phone and included video
- Videos are displayed and they have a button to toggle full screen mode using
ExoPlayer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.DetailsActivity"/>
+        <activity android:name=".Activities.StepsListActivity"/>
     </application>
 
 </manifest>
