feat: Added up navigation for each activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainActivity">
+        <activity android:name=".Activities.MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.DetailsActivity"/>
-        <activity android:name=".Activities.StepsListActivity"/>
+        <activity android:parentActivityName=".Activities.StepsListActivity"
+            android:name=".Activities.DetailsActivity"/>
+        <activity android:parentActivityName=".Activities.MainActivity"
+            android:launchMode="singleTop"
+            android:name=".Activities.StepsListActivity"/>
     </application>
 
 </manifest>
