feat: Added a widget and an overflow menu in the details activity
- The widget displays the selected recipe's name, image and servings
- Clicking on the widget launches the details activity with the
corresponding recipe, on the first tab by default

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.bakingapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainActivity"
+        <activity
+            android:name=".Activities.MainActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,11 +20,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:parentActivityName=".Activities.StepsListActivity"
-            android:name=".Activities.DetailsActivity"/>
-        <activity android:parentActivityName=".Activities.MainActivity"
+        <activity
+            android:name=".Activities.DetailsActivity"
+            android:parentActivityName=".Activities.StepsListActivity" />
+        <activity
+            android:name=".Activities.StepsListActivity"
             android:launchMode="singleTop"
-            android:name=".Activities.StepsListActivity"/>
+            android:parentActivityName=".Activities.MainActivity" />
+
+        <receiver android:name=".Widgets.RecipeWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/recipe_widget_provider_info" />
+        </receiver>
     </application>
 
 </manifest>
