--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:launchMode="singleTop"
             android:parentActivityName=".Activities.MainActivity" />
 
-        <receiver android:name=".Widgets.RecipeWidgetProvider">
+        <receiver android:name=".Widgets.RecipeWidgetProvider" android:label="@string/widget_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
